# holdout

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  verify_contract.py
.github/workflows/: ci.yml
docs/: Holdout Build Spec.md  Holdout Testing Strategy.docx  Holdout Testing Strategy.md  MAGI Build Spec.docx  MAGI Build Spec.md  MAGI Design Document Hardened.docx  MAGI Design Document Hardened.md  MAGI Testing Strategy.md
prompts/: commit.txt  concurrence.txt
src/holdout/: __init__.py  cli.py  types.py
src/holdout/prompts/: crux.txt
src/holdout/protocol/: commit.py  concurrence.py  crux.py  engine.py  tabulate.py
src/holdout/providers/: base.py  fake.py  openai_compat.py
src/holdout/report/: render.py  template.html.j2
src/holdout/store/: sqlite.py
src/magi/: __init__.py  cli.py  types.py
src/magi/protocol/: commit.py  concurrence.py  crux.py  engine.py  tabulate.py
src/magi/providers/: openai_compat.py
src/magi/report/: render.py  template.html.j2
src/magi/store/: schema.sql  sqlite.py
tests/: conftest.py  test_cli.py  test_commit.py  test_concurrence.py  test_crux.py  test_engine.py  test_openai_compat.py  test_prompts.py  test_repo_hygiene.py  test_report.py  test_store.py  test_tabulate.py  test_types.py
